# meshroom-video-plugin

./: README.md  __init__.py  meshroom_video_plugin.py  pyproject.toml  requirements.txt  setup.py
docs/: metadata_improvements.md
meshroom_video_plugin/: __init__.py  meshroom_video_plugin.py
